# simple-nfsd

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  Jenkinsfile  LICENSE  Makefile  README.md  ROADMAP.md  ROADMAP_CHECKLIST.md  VALIDATION_REPORT.md  Vagrantfile  simple-nfsd.code-workspace
automation/: Makefile.vm  README-SIMPLIFIED.md  README.md  inventory.ini  playbook.yml  requirements.yml  vagrant-boxes.yml
automation/ansible/: Makefile.vm  ansible.cfg  inventory-vmware.ini  inventory.ini  playbook-build.yml  playbook.yml  requirements.yml  vagrant-boxes.yml
automation/ci/: Jenkinsfile
automation/docker/: Dockerfile
automation/scripts/: setup-remote.sh  vm-build  vm-ssh  vm-test  vm-test-matrix
automation/templates/: simple-nfsd.conf.j2
automation/vagrant/: Vagrantfile
config/: simple-nfsd.json  simple-nfsd.yaml
deployment/: README.md
deployment/launchd/: com.simpledaemons.simple-nfsd.plist  (+1 more)
docs/: README.md
packaging/: CMakeLists.cpack
project/: FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  TECHNICAL_DEBT.md
scripts/: build-linux.sh  build-macos.sh  build-windows.bat
src/: auth_manager.cpp  config_manager.cpp  file_access_tracker.cpp  filesystem_manager.cpp  lock_manager.cpp  main.cpp  nfs_server_simple.cpp  nfsd_app.cpp  portmapper.cpp  rpc_protocol.cpp  security_manager.cpp  vfs_interface.cpp
tests/: CMakeLists.txt  test_auth_manager.cpp  test_basic_functionality.cpp  test_config_manager.cpp  test_main.cpp  test_minimal.cpp  test_nfs_server.cpp  test_nfsd_app.cpp  test_nfsv2_procedures.cpp  test_nfsv3_portmapper.cpp  test_nfsv3_procedures.cpp  test_nfsv4_procedures.cpp  test_nfsv4_security.cpp  test_rpc_protocol.cpp  test_simple.cpp
virtuals/: vm-manager
(+104 files in other folders)
